@@ -1,4 +1,5 @@
 *~
 *.old
+open_diffs
 
 
