@@ -1,32 +1,0 @@
-#!/system/bin/sh
-
-log -p i -t init.d/ramzswap start
-
-# clean up one swap device every 5h to free unused pages in ramzswap
-(while [ 1 ]; do
-for i in 0 1;
-do \
-sleep 18000;
-log -p i -t init.d/ramzswap resetting swap and swap device /dev/block/ramzswap$i;
-/system/xbin/busybox swapoff /dev/block/ramzswap$i;
-/system/bin/rzscontrol /dev/block/ramzswap$i --reset;
-/system/bin/rzscontrol /dev/block/ramzswap$i --init;
-/system/xbin/busybox swapon -p 1 /dev/block/ramzswap$i;
-done;
-
-#sleep 18000;
-#log -p i -t init.d/ramzswap resetting swap and swap device /dev/block/ramzswap0;
-#/system/xbin/busybox swapoff /dev/block/ramzswap0;
-#/system/bin/rzscontrol /dev/block/ramzswap0 --reset;
-#/system/bin/rzscontrol /dev/block/ramzswap0 --init;
-#/system/xbin/busybox swapon -p 1 /dev/block/ramzswap0;
-#sleep 18000;
-#log -p i -t init.d/ramzswap resetting swap and swap device /dev/block/ramzswap1;
-#/system/xbin/busybox swapoff /dev/block/ramzswap1;
-#/system/bin/rzscontrol /dev/block/ramzswap1 --reset;
-#/system/bin/rzscontrol /dev/block/ramzswap1 --init;
-#/system/xbin/busybox swapon -p 1 /dev/block/ramzswap1;
-done;) &
-
-log -p i -t init.d/ramzswap end
-
